--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -4,7 +4,6 @@
 # documentation.
 
 name: Dart
-uses: subosito/flutter-action@v2.7.0
 
 on:
   push:
@@ -19,6 +18,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      
+      
+      - name: Flutter action
+        uses: subosito/flutter-action@v2.7.0
+
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
       # You can specify other versions if desired, see documentation here:
